string lenth function

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Geraldinne Bohórquez <geraldinnebohor@gmail.com>
-Diego Monroy <difemo91@gmail.com>
+Dovine Owuor <owuordove@gmail.com>
+Oke Oletunji <username@domain.com>
